# OpenGLLearningProject

./: CMakeLists.txt  README.md  vc140.idb
application/: Application.cpp  Application.hpp  CMakeLists.txt
application/camera/: Camera.cpp  Camera.hpp  CameraControl.hpp  GameCameraControl.cpp  GameCameraControl.hpp  OrthographicCamera.hpp  OthographicCamera.cpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  TrackBallControl.cpp  TrackBallControl.hpp
assets/shaders/: fragment.glsl  light.frag  vertex.glsl
dependency/include/glad/: glad.h
dependency/lib/: soil2-debug.lib
glframework/: CMakeLists.txt  core.h  shader.hpp  shaer.cpp  texture.cpp  texture.hpp
include/: OpenGLCmakeProject.h
src/: OpenGLCmakeProject.cpp  callback.cpp  glad.c  main.cpp
wrapper/: CMakeLists.txt  checkError.cpp  checkError.hpp
